# snpy

./: .gitignore  README.md  pyproject.toml
src/snpy/: __init__.py
src/snpy/core/: base.py  params.py
src/snpy/core/python/: dist.py
src/snpy/core/r/: dist.py  interface.py
src/snpy/distributions/: sc.py  sn.py  st.py
src/snpy/models/: __init__.py
test/: test_params.py
